Exams/final exam/7-1-str_maxlenoc/trace/7-1-str_maxlenoc.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r9p24.42.us.org
Darwin 17.4.0 x86_64
$> date
Fri Apr 19 17:49:49 PDT 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/piscine-c-exam-final/exam_20190419/esupatae

= Git history ==================================================================
$> git -C /var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user log --pretty='%H - %an, %ad : %s'
05dc52703b8a72b03ad6dda195644616cead0e0f - Exam 42, Fri Apr 19 17:49:31 2019 -0700 : Nothing
110495752c7ddf3a82dd8ffdf3932904607ae985 - Exam 42, Fri Apr 19 17:46:19 2019 -0700 : Not working: Just want to have my files
2a3cc29fd0d940b13901c80041df2456b359ecc9 - Exam 42, Fri Apr 19 15:31:45 2019 -0700 : Level 6: count_alpha
5d92a55724d13291c5632d9c29cf4bc842e7c7c8 - Exam 42, Fri Apr 19 14:27:26 2019 -0700 : Level 5: Brainfuck
6bdd35accb38850a6435a59c75e111857f5e71ed - Exam 42, Fri Apr 19 12:12:52 2019 -0700 : Level 4: fprime
56945ce668bfafce1949afa066c73adf581a01ed - Exam 42, Fri Apr 19 11:26:34 2019 -0700 : Level 3: hidenp - account for repeat letters in string 1
6d17a2c2eb989d84e097c600790a452e15297194 - Exam 42, Fri Apr 19 11:21:00 2019 -0700 : Level 3: hidenp
87d2ef347bc84e8278b4b7f99948902b69eae17a - Exam 42, Fri Apr 19 10:56:12 2019 -0700 : Level 2: union
e7e05f3e9a40d6c31cd74871657ffd1eb66b0648 - Exam 42, Fri Apr 19 10:27:35 2019 -0700 : Level 1: first_word
47197b9f062adf2a67d7c32d6610f51546c23dc7 - Exam 42, Fri Apr 19 10:09:07 2019 -0700 : Level 0: only_a
 
= Collected files ==========================================
$> ls -lAR /var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user
total 8
-rw-r--r--  1 deepthought  deepthought  2732 Apr 19 17:49 __GIT_HISTORY
drwxr-xr-x  5 deepthought  deepthought   170 Apr 19 17:49 brainfuck
drwxr-xr-x  3 deepthought  deepthought   102 Apr 19 17:49 count_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Apr 19 17:49 first_word
drwxr-xr-x  3 deepthought  deepthought   102 Apr 19 17:49 fprime
drwxr-xr-x  3 deepthought  deepthought   102 Apr 19 17:49 hidenp
drwxr-xr-x  3 deepthought  deepthought   102 Apr 19 17:49 only_a
drwxr-xr-x  4 deepthought  deepthought   136 Apr 19 17:49 ord_alphlong
drwxr-xr-x  3 deepthought  deepthought   102 Apr 19 17:49 str_maxlenoc
drwxr-xr-x  3 deepthought  deepthought   102 Apr 19 17:49 union

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/brainfuck:
total 24
-rw-r--r--  1 deepthought  deepthought  2023 Apr 19 17:49 brainfuck.c
-rw-r--r--  1 deepthought  deepthought  1286 Apr 19 17:49 brainfuck.h
-rw-r--r--  1 deepthought  deepthought  1347 Apr 19 17:49 helper_functions.c

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/count_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  2067 Apr 19 17:49 count_alpha.c

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/first_word:
total 8
-rw-r--r--  1 deepthought  deepthought  1243 Apr 19 17:49 first_word.c

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/fprime:
total 8
-rw-r--r--  1 deepthought  deepthought  1443 Apr 19 17:49 fprime.c

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/hidenp:
total 8
-rw-r--r--  1 deepthought  deepthought  1442 Apr 19 17:49 hidenp.c

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/only_a:
total 8
-rw-r--r--  1 deepthought  deepthought  965 Apr 19 17:49 only_a.c

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/ord_alphlong:
total 16
-rw-r--r--  1 deepthought  deepthought  1931 Apr 19 17:49 main.c
-rw-r--r--  1 deepthought  deepthought  1091 Apr 19 17:49 main.h

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/str_maxlenoc:
total 8
-rw-r--r--  1 deepthought  deepthought  988 Apr 19 17:49 str_maxlenoc.c

/var/folders/q6/kz0nwc_s1mx0hzp4zg75gw6h0000gp/T/tmpegQGNf/user/union:
total 8
-rw-r--r--  1 deepthought  deepthought  1451 Apr 19 17:49 union.c
 
= str_maxlenoc =================================================================
$> gcc -Wextra -Wall -Werror str_maxlenoc.c -o user_exe 
str_maxlenoc.c:14:14: error: unused parameter 'argc' [-Werror,-Wunused-parameter]
int     main(int argc, char **argv)
                 ^
str_maxlenoc.c:14:27: error: unused parameter 'argv' [-Werror,-Wunused-parameter]
int     main(int argc, char **argv)
                              ^
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
